--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <form action="/api/burgers" method="POST" style=" align-content: center">
+            <form style=" align-content: center">
                 <textarea name="burger_name" id="burger_name" cols="30" rows="10"></textarea>
                 <button>Add to the Menu!</button>
             </form>
