--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <div class="container">
-    <div class="row">
+    <div class="row" style="text-align: center">
         <div class="col-sm-12">
-            picture place holder
+            <h1>Time for a Burger!</h1>
+            <i class="fas fa-hamburger fa-10x"></i>
         </div>
     </div>
     <div class="row">
@@ -28,12 +29,16 @@
         </div>
 
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <form style=" align-content: center">
+    <div class="row" style="align: center">
+        <div class="input-container">
+            <input class="effect-1" type="text" placeholder="Add to the Menu!">
+            <span class="focus-border"></span>
+        </div>
+        {{!-- <div class="col-sm-12">
+            <form style="align-content: center">
                 <textarea name="burger_name" id="burger_name" cols="30" rows="10"></textarea>
                 <button>Add to the Menu!</button>
             </form>
-        </div>
+        </div> --}}
     </div>
 </div>
