added delete function

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ h1 {
 }
 
 .input-container {
-  align: center;
+  align-content: center;
   /* float: center; */
   width: 40%;
   margin: 42px 3%;
