--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,15 +30,21 @@
 
     </div>
     <div class="row" style="align: center">
-        <div class="input-container">
-            <input class="effect-1" type="text" placeholder="Add to the Menu!">
-            <span class="focus-border"></span>
-        </div>
-        {{!-- <div class="col-sm-12">
-            <form style="align-content: center">
+        <form class="input-container">
+            {{!-- <div class="input-container"> --}}
+                <input class="effect-1" type="text" placeholder="enter burger here!">
+                <button>Add to the Menu!</button>
+                <span class="focus-border"></span>
+
+                {{!--
+            </div> --}}
+        </form>
+        {{!-- <div class="col-sm-12"> --}}
+            {{!-- <form style="align-content: center">
                 <textarea name="burger_name" id="burger_name" cols="30" rows="10"></textarea>
                 <button>Add to the Menu!</button>
-            </form>
+            </form> --}}
+            {{!--
         </div> --}}
     </div>
 </div>
