--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,20 +8,23 @@
     <div class="row">
 
         <div class="col-sm-6">
+            <h3>Burgers to Eat</h3>
             <ul>
                 {{#each burgerData}}
                 {{#unless devoured}}
-                <li>{{burger_name}} <button>Eat the Burger</button></li>
+                {{> burgers/burger-block devoured=true}}
                 {{/unless}}
                 {{/each}}
             </ul>
         </div>
 
         <div class="col-sm-6">
+            <h3>Burgers Eaten</h3>
             <ul>
                 {{#each burgerData}}
                 {{#if devoured}}
-                <li>{{burger_name}} <button>Eat the Burger</button></li>
+                {{> burgers/burger-block devoured=false}}
+
                 {{/if}}
                 {{/each}}
             </ul>
@@ -32,8 +35,8 @@
     <div class="row" style="align: center">
         <form class="input-container">
             {{!-- <div class="input-container"> --}}
-                <input class="effect-1" type="text" placeholder="enter burger here!">
-                <button>Add to the Menu!</button>
+                <input class="effect-1" id="burger_name" type="text" placeholder="enter burger here!">
+                <button id="addMenu">Add to the Menu!</button>
                 <span class="focus-border"></span>
 
                 {{!--
