--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,10 @@
 <li>
-    {{name}}
+    {{burger_name}}
 
     <button class="change-devoured" data-id="{{id}}" data-newdevour="{{devoured}}">
-        {{#if sleep}}devoured!{{else}}EAT UP!{{/if}}
+        {{#if devoured}}EAT THE BURGER!{{else}}devoured!{{/if}}
     </button>
 
     <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+
 </li>
