--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,11 @@
 <li>
     {{burger_name}}
-
+    {{#if devour}}
     <button class="change-devoured" data-id="{{id}}" data-newdevour="{{devoured}}">
-        {{#if devoured}}EAT THE BURGER!{{else}}devoured!{{/if}}
+        EAT THE BURGER!
     </button>
+    {{else}} <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>{{/if}}
+
+
 
 </li>
